--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{background-color:#a0a7b2;
 font-family:'Ubuntu';
 margin-bottom:60px;
 }
-
+#reference{margin-bottom:200px;}
 
 #title{
     color:#5dbf6c;
